Partners videos and fix prod

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="folder-decor"><img class="desktop" src="images/content/decor-folder-home.png"><img class="mobile" src="images/content/decor-folder-home-mobile.png"></div>
       </section>
       <section class="partners-wrap">
-        <div class="partners active">
+        <div class="partners">
           <div class="container">
             <div class="row">
               <div class="col-md-14">
@@ -155,7 +155,7 @@
               </div>
               <div class="col-md-10">
                 <div class="partners-info">
-                  <div class="partners-info-top fade-up"><span class="caption-1 caption-rotate caption-border"><span data-text="Tim Heath">Tim Heath</span></span></div>
+                  <div class="partners-info-top fade-up"><span class="caption-1 caption-rotate caption-border"><span data-text="Tim Heath 2">Tim Heath 2</span></span></div>
                   <div class="partners-info-text fade-up">
                     <h3 class="title-3">We partner with unique individuals building great companies</h3>
                     <p class="description-1">Tim founded Vereeni that was a first name for Yolo Investments in 2017 with the intention of drawing on his experience across the gaming, blockchain and technology spaces.</p>
